# rdesilv

./: .dockerignore  .env.exemple  .gitignore  README.md  main.py  pyproject.toml
scripts/: prod.sh
src/: config.py
src/app/: main.py
src/app/api/: __init__.py
src/app/routes/: check.py  extract.py  licenciement.py
src/app/service/: scan.py  verify.py
src/checking/: __init__.py  checker.py
src/checks/: __init__.py  allocations_familiales.py  bases.py  convention.py  csg.py  fiscal.py  frappe.py  rgdu.py
src/convention/: convention.md
src/ingestion/: __init__.py  ingestion.py
src/models/: __init__.py  check.py  convention_check.py  frappe.py  licenciement.py  payslip.py
src/services/: __init__.py  licenciement.py
