[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rdesilv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.129.0",
    "google-genai>=1.63.0",
    "ipykernel>=7.2.0",
    "pandas>=3.0.0",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "pymupdf>=1.24.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
dev  = "src.app.main:dev_server"
prod = "src.app.main:prod_server"
